# writing-sumerian-parser

./: .gitignore  README.md  pyproject.toml  setup.py
cuneiformparser/: __init__.py  listener.py  parser.py  preprocess.py
cuneiformparser/grammar/: Cuneiform.g4
writingsumerianparser/: __init__.py  listener.py  preprocess.py
writingsumerianparser/grammar/: Cuneiform.g4  __init__.py
